# Giza-Hub

./: .gitignore  LICENSE  README.md
actions/trend_token_prediction/: predict_cairo_action.py  predict_onnx_action.py  train_action.py
awesome-giza-actions/: README.md
awesome-giza-actions/Aave Liquiditation Model/: pyproject.toml
awesome-giza-actions/Aave_Liquidation_Model/: README.md  aave_liquidations_actions.ipynb  aave_liquidations_actions_notebook.ipynb  aave_liquidations_model.ipynb  aave_liquidations_model.py  aave_liquidations_model_notebook.ipynb  data_array.npy  pyproject.toml
awesome-giza-actions/Aave_Liquiditation_Model/: liquidations_model_aave.ipynb
awesome-giza-actions/compound_ur_prediction/: X_test_sample.npy  compound_ur.ipynb  download_proof.py  requirements.txt  train_and_deploy_action.py  unverifiable_inference.py  verifiable_inference.py
awesome-giza-actions/pool/: README.md  predict_cairo_action.py  predict_onnx_action.py  pyproject.toml  train_action.py
awesome-giza-actions/trend_token_prediction/: download_proof.py  example_token_trend.csv  predict_cairo_action.py  pytorch-token-trend_action_model.onnx  train_action.py
awesome-giza-actions/uni-v3-lp-agent/: action_agent.py  lp_tools.py  model_training.py  uni_helpers.py
awesome-giza-actions/volatilty_token_prediction/: README.md  financial_features.py  predict_cairo_action.py  train_action.py  utils.py  vol.ipynb
awesome-giza-actions/xgb-diabetes/: pyproject.toml  xgb_diabetes.ipynb  xgb_diabetes.json  zk_xgb.proof
awesome-giza-actions/zkml-geiger-counter/: .env.example  README.md  geiger.py  server.py  zkml_model.cairo
awesome-giza-agents/: README.md
awesome-giza-agents/Pendle-Agent/: .env  .gitignore  README.md  action_agent.py  commands.txt   pyproject.toml  wstETH_daily_yield.parquet
awesome-giza-agents/Pendle-Agent/agent/: addresses.py  agent.py  helpers.py  setup.py
awesome-giza-agents/Pendle-Agent/data/: protocol_trades_liquidity.parquet  weETH_daily_yield.parquet
awesome-giza-agents/Pendle-Agent/model/: yield_prediction_actions_notebook.ipynb  yield_prediction_model.ipynb
awesome-giza-agents/Yield_Predictor_Model/: .gitignore  README.md  pyproject.toml  yield_prediction_actions_notebook.ipynb  yield_prediction_model.ipynb
awesome-giza-agents/uni-v3-lp-agent/: README.md  action_agent.py  addresses.py  agent_setup_notebook.ipynb  get_tokens.py  model_training.py  pyproject.toml  requirements.txt  uni_helpers.py
awesome-giza-zkml/: README.md
awesome-giza-zkml/xgb-diabetes/: pyproject.toml  xgb_diabetes.ipynb  xgb_diabetes.json
awesome-giza-zkml/xgb-diabetes/xgb_diabetes/: Scarb.toml
awesome-giza-zkml/xgb-diabetes/xgb_diabetes/src/: lib.cairo  xgb_inference.cairo
awesome-orion/: README.md
basic/Provable-Multiple-Linear-Regression-Solver/: README.md  Scarb.toml
basic/mnist_nn/: QAT_MNIST_MLP.ipynb
basic/verifiable_Lagrange_interpolation/: README.md  Scarb.toml
benchmark/: benchmark_process.ipynb  input.txt
benchmark/benches/: program.memory  (+2 more)
mnist_nn/: QAT_MNIST_MLP.ipynb  Scarb.toml  cairo_project.toml  q_aware_model.tflite
verifiable_linear_regression_model/: README.md  Scarb.toml
verifiable_principal_component_analysis/: Scarb.toml
verifiable_support_vector_machine/: Scarb.toml
(+143 files in other folders)
