[tool.poetry]
name = "yearn"
version = "0.1.0"
description = "Giza Actions SDK project"
authors = ["Giza <contact@gizatech.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
giza-actions = "^0.1.3"
giza-datasets = "^0.1.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
scipy = "^1.12.0"
numpy = "^1.26.4"
certifi = "^2024.2.2"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
onnx = "^1.15.0"
tf20nnx ="^1.16.1"
tensorflow = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
