[tool.poetry]
name = "xgb-diabetes"
version = "0.1.0"
description = ""
authors = ["raphaelDkhn <raphael@gizatech.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
xgboost = "^2.0.3"
giza-sdk = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
